attached_assets/Pasted-dy-parser-lib-read-js-128-18-at-AsyncResource-runInAsyncScope-node-async-hooks-206-9-at--1750219500170_1750219500171.txt
dy-parser/lib/read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:206:9)
    at invokeCallback (/home/runner/workspace/node_modules/raw-body/index.js:238:16)
    at done (/home/runner/workspace/node_modules/raw-body/index.js:227:7)
    at IncomingMessage.onEnd (/home/runner/workspace/node_modules/raw-body/index.js:287:7)
    at IncomingMessage.emit (node:events:518:28)
    at endReadableNT (node:internal/streams/readable:1698:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
SyntaxError: Unexpected token '8', "8" is not valid JSON
    at JSON.parse (<anonymous>)
    at createStrictSyntaxError (/home/runner/workspace/node_modules/body-parser/lib/types/json.js:169:10)
    at parse (/home/runner/workspace/node_modules/body-parser/lib/types/json.js:86:15)
    at /home/runner/workspace/node_modules/body-parser/lib/read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:206:9)
    at invokeCallback (/home/runner/workspace/node_modules/raw-body/index.js:238:16)
    at done (/home/runner/workspace/node_modules/raw-body/index.js:227:7)
    at IncomingMessage.onEnd (/home/runner/workspace/node_modules/raw-body/index.js:287:7)
    at IncomingMessage.emit (node:events:518:28)
    at endReadableNT (node:internal/streams/readable:1698:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
4:04:24 AM [vite] (client) hmr update /src/components/calendar-view.jsx, /src/index.css?v=guP0OG6xjhvWN3a_LqpuC
4:04:24 AM [vite] Internal server error: /home/runner/workspace/client/src/components/calendar-view.jsx: Unexpected token (185:33)

  183 |                 
  184 |                   
> 185 |                     {format(day, 'd')}
      |                                  ^
  186 |                   
  187 |                   {isCurrentMonth && dayData.hasData && (
  188 |                     
  Plugin: vite:react-babel
  File: /home/runner/workspace/client/src/components/calendar-view.jsx:185:33
  183|                  
  184|                    
  185|                      {format(day, 'd')}
     |                                   ^
  186|                    
  187|                    {isCurrentMonth && dayData.hasData && (
      at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
      at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
      at unexpected (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1543:16)
      at parseIdentifierName (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2790:12)
      at parseIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2759:23)
      at parseBindingAtom (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:391:17)
      at parseMaybeDefault (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:520:25)
      at parseBindingElement (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:492:23)
      at parseBindingList (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:442:24)
      at parseFunctionParams (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1715:24)
      at parseMethod (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2453:10)
      at parseObjectMethod (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2265:19)
      at parseObjPropValue (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2343:24)
      at parsePropertyDefinition (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2193:17)
      at parseObjectLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2060:21)
      at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1165:21)
      at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/plugins/jsx/index.ts:583:22)
      at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:728:23)
      at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at parseMaybeUnaryOrPrivate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at parseMaybeConditional (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at callback (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:257:12)
      at allowInAnd (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:3149:12)
      at parseMaybeAssignAllowIn (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:256:17)
      at parseParenAndDistinguishExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1785:16)
      at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1153:21)
      at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/plugins/jsx/index.ts:583:22)
      at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:728:23)
      at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at parseMaybeUnaryOrPrivate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at parseMaybeConditional (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at parseExpressionBase (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:226:23)
      at callback (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:217:39)
      at allowInAnd (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:3144:16)
      at parseExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:217:17)
      at parseReturnStatement (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1106:28)
      at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:529:21)
      at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:468:17)
      at parseStatementListItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:417:17)
      at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1435:16)
      at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1408:10)
      at parseBlock (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1376:10)
      at parseFunctionBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2580:24)
      at parseArrowExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2521:10)